--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -202,12 +202,12 @@
     <Compile Include="Controllers\PartnerContactsController.cs" />
     <Compile Include="Controllers\PartnersController.cs" />
     <Compile Include="Controllers\PopulateController.cs" />
+    <Compile Include="Controllers\TerminalsController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\AccountType.cs" />
-    <Compile Include="Helpers\Cassette.cs" />
     <Compile Include="Helpers\CommunicationType.cs" />
     <Compile Include="Helpers\CustomRoleProvider.cs" />
     <Compile Include="Helpers\GreaterOrLessAmmount.cs" />
@@ -436,6 +436,10 @@
     <Compile Include="Migrations\201709160237198_ActualizadoPhoneEnTerminal.Designer.cs">
       <DependentUpon>201709160237198_ActualizadoPhoneEnTerminal.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709181911451_AddedCassette.cs" />
+    <Compile Include="Migrations\201709181911451_AddedCassette.Designer.cs">
+      <DependentUpon>201709181911451_AddedCassette.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\DeleteLogoModel.cs" />
     <Compile Include="Migrations\DeleteLogoModel.Designer.cs">
       <DependentUpon>DeleteLogoModel.cs</DependentUpon>
@@ -447,6 +451,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
     <Compile Include="Models\BankAccount.cs" />
+    <Compile Include="Models\Cassette.cs" />
     <Compile Include="Models\City.cs" />
     <Compile Include="Models\ContactType.cs" />
     <Compile Include="Models\Contract.cs" />
@@ -794,10 +799,16 @@
     <Content Include="Views\BankAccount\Details.cshtml" />
     <Content Include="Views\BankAccount\Edit.cshtml" />
     <Content Include="Views\BankAccount\Index.cshtml" />
+    <Content Include="Views\Terminals\Create.cshtml" />
+    <Content Include="Views\Terminals\Delete.cshtml" />
+    <Content Include="Views\Terminals\Details.cshtml" />
+    <Content Include="Views\Terminals\Edit.cshtml" />
+    <Content Include="Views\Terminals\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Uploads\" />
+    <Folder Include="Views\Terminals\Sections\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -973,6 +984,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709160237198_ActualizadoPhoneEnTerminal.resx">
       <DependentUpon>201709160237198_ActualizadoPhoneEnTerminal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709181911451_AddedCassette.resx">
+      <DependentUpon>201709181911451_AddedCassette.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\DeleteLogoModel.resx">
       <DependentUpon>DeleteLogoModel.cs</DependentUpon>
