--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -219,7 +219,7 @@
     <Compile Include="Helpers\PermissionsAssigned.cs" />
     <Compile Include="Helpers\Settled.cs" />
     <Compile Include="Helpers\Status.cs" />
-    <Compile Include="Helpers\Surcharge.cs" />
+    <Compile Include="Helpers\SurchargeType.cs" />
     <Compile Include="Migrations\201708160653179_Initial.cs" />
     <Compile Include="Migrations\201708160653179_Initial.Designer.cs">
       <DependentUpon>201708160653179_Initial.cs</DependentUpon>
@@ -439,6 +439,26 @@
     <Compile Include="Migrations\201709181911451_AddedCassette.cs" />
     <Compile Include="Migrations\201709181911451_AddedCassette.Designer.cs">
       <DependentUpon>201709181911451_AddedCassette.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709191550085_LastTransaction.cs" />
+    <Compile Include="Migrations\201709191550085_LastTransaction.Designer.cs">
+      <DependentUpon>201709191550085_LastTransaction.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709191957147_SerialNumberRectificadodeNombre.cs" />
+    <Compile Include="Migrations\201709191957147_SerialNumberRectificadodeNombre.Designer.cs">
+      <DependentUpon>201709191957147_SerialNumberRectificadodeNombre.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709192010164_SurchageTypeArreglarNombre.cs" />
+    <Compile Include="Migrations\201709192010164_SurchageTypeArreglarNombre.Designer.cs">
+      <DependentUpon>201709192010164_SurchageTypeArreglarNombre.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709201854589_UpdatedTerminalNulleableLastTransactionId.cs" />
+    <Compile Include="Migrations\201709201854589_UpdatedTerminalNulleableLastTransactionId.Designer.cs">
+      <DependentUpon>201709201854589_UpdatedTerminalNulleableLastTransactionId.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709211620330_UpdatedTerminalCrypto.cs" />
+    <Compile Include="Migrations\201709211620330_UpdatedTerminalCrypto.Designer.cs">
+      <DependentUpon>201709211620330_UpdatedTerminalCrypto.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\DeleteLogoModel.cs" />
     <Compile Include="Migrations\DeleteLogoModel.Designer.cs">
@@ -805,11 +825,24 @@
     <Content Include="Views\Terminals\Edit.cshtml" />
     <Content Include="Views\Terminals\Index.cshtml" />
     <Content Include="Views\BankAccount\Search.cshtml" />
+    <Content Include="Views\Terminals\Search.cshtml" />
+    <Content Include="Views\Partners\Delete.cshtml" />
+    <Content Include="Views\Terminals\Sections\GeneralInfo.cshtml" />
+    <Content Include="Views\Terminals\Sections\TerminalStatistics.cshtml" />
+    <Content Include="Views\Terminals\Sections\Documents.cshtml" />
+    <Content Include="Views\Terminals\Sections\Notes.cshtml" />
+    <Content Include="Views\Terminals\Sections\Contacts.cshtml" />
+    <Content Include="Views\Terminals\Sections\VaultCash.cshtml" />
+    <Content Include="Views\Terminals\Sections\SurchargeSplits.cshtml" />
+    <Content Include="Views\Terminals\Sections\Interchanges.cshtml" />
+    <Content Include="Views\Terminals\Sections\Cassettes.cshtml" />
+    <Content Include="Views\Terminals\Sections\CashManagment.cshtml" />
+    <Content Include="Views\Terminals\Sections\Transactions.cshtml" />
+    <Content Include="Views\Terminals\Sections\TerminalUsers.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Uploads\" />
-    <Folder Include="Views\Terminals\Sections\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -988,6 +1021,21 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709181911451_AddedCassette.resx">
       <DependentUpon>201709181911451_AddedCassette.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709191550085_LastTransaction.resx">
+      <DependentUpon>201709191550085_LastTransaction.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709191957147_SerialNumberRectificadodeNombre.resx">
+      <DependentUpon>201709191957147_SerialNumberRectificadodeNombre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709192010164_SurchageTypeArreglarNombre.resx">
+      <DependentUpon>201709192010164_SurchageTypeArreglarNombre.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709201854589_UpdatedTerminalNulleableLastTransactionId.resx">
+      <DependentUpon>201709201854589_UpdatedTerminalNulleableLastTransactionId.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709211620330_UpdatedTerminalCrypto.resx">
+      <DependentUpon>201709211620330_UpdatedTerminalCrypto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\DeleteLogoModel.resx">
       <DependentUpon>DeleteLogoModel.cs</DependentUpon>
