--- a/OctagonPlatform/Web.config
+++ b/OctagonPlatform/Web.config
@@ -23,8 +23,9 @@
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
+    <sessionState timeout="2880"></sessionState>
     <authentication mode="Forms">
-      <forms loginUrl="Account/Login"></forms>
+      <forms loginUrl="~/Account/Login" timeout="2880" ></forms>
     </authentication>
     <roleManager enabled="true" defaultProvider="CustomRoleProvider">
       <providers>
