The same before

--- a/OctagonPlatform/Web.config
+++ b/OctagonPlatform/Web.config
@@ -25,7 +25,7 @@
     <httpRuntime targetFramework="4.6.1" />
     <sessionState timeout="2880"></sessionState>
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login" timeout="2880" ></forms>
+      <forms loginUrl="~/Account/Login" timeout="2880" slidingExpiration="true" ></forms>
     </authentication>
     <roleManager enabled="true" defaultProvider="CustomRoleProvider">
       <providers>
