creado modelos de terminalConfig y terminal message

--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -528,7 +528,9 @@
     <Compile Include="Models\State.cs" />
     <Compile Include="Models\Surcharge.cs" />
     <Compile Include="Models\Terminal.cs" />
+    <Compile Include="Models\TerminalAlertConfig.cs" />
     <Compile Include="Models\TerminalContact.cs" />
+    <Compile Include="Models\TerminalMessage.cs" />
     <Compile Include="Models\TerminalPicture.cs" />
     <Compile Include="Models\Transaction.cs" />
     <Compile Include="Models\User.cs" />
