--- a/OctagonPlatform/OctagonPlatform.csproj
+++ b/OctagonPlatform/OctagonPlatform.csproj
@@ -205,11 +205,14 @@
     <Compile Include="Controllers\TerminalContactsController.cs" />
     <Compile Include="Controllers\TerminalsController.cs" />
     <Compile Include="Controllers\UsersController.cs" />
+    <Compile Include="Controllers\VaultCashController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\AccountType.cs" />
     <Compile Include="Helpers\CommunicationType.cs" />
+    <Compile Include="Helpers\Constants.cs" />
+    <Compile Include="Helpers\Cryptography.cs" />
     <Compile Include="Helpers\CustomRoleProvider.cs" />
     <Compile Include="Helpers\DateTimeValidation.cs" />
     <Compile Include="Helpers\GreaterOrLessAmmount.cs" />
@@ -490,6 +493,26 @@
     <Compile Include="Migrations\201709282113300_ArregladoAmmountPorAmountErrorGramatical.Designer.cs">
       <DependentUpon>201709282113300_ArregladoAmmountPorAmountErrorGramatical.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201709282132023_ElimineCampoInterchangedeTerminals.cs" />
+    <Compile Include="Migrations\201709282132023_ElimineCampoInterchangedeTerminals.Designer.cs">
+      <DependentUpon>201709282132023_ElimineCampoInterchangedeTerminals.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709292200097_EliminadoVaultCashAmount.cs" />
+    <Compile Include="Migrations\201709292200097_EliminadoVaultCashAmount.Designer.cs">
+      <DependentUpon>201709292200097_EliminadoVaultCashAmount.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709300251235_AddedKeyToUser.cs" />
+    <Compile Include="Migrations\201709300251235_AddedKeyToUser.Designer.cs">
+      <DependentUpon>201709300251235_AddedKeyToUser.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709300303349_UserNameUnique.cs" />
+    <Compile Include="Migrations\201709300303349_UserNameUnique.Designer.cs">
+      <DependentUpon>201709300303349_UserNameUnique.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201709300355273_UserNameUniqueEliminado.cs" />
+    <Compile Include="Migrations\201709300355273_UserNameUniqueEliminado.Designer.cs">
+      <DependentUpon>201709300355273_UserNameUniqueEliminado.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\DeleteLogoModel.cs" />
     <Compile Include="Migrations\DeleteLogoModel.Designer.cs">
       <DependentUpon>DeleteLogoModel.cs</DependentUpon>
@@ -519,6 +542,7 @@
     <Compile Include="Models\FormsViewModels\UserBAViewModel.cs" />
     <Compile Include="Models\FormsViewModels\UserEditFormViewModel.cs" />
     <Compile Include="Models\FormsViewModels\UserLoginViewModel.cs" />
+    <Compile Include="Models\FormsViewModels\VaultCashFormViewModel.cs" />
     <Compile Include="Models\InterChange.cs" />
     <Compile Include="Models\InterfacesRepository\IAccountRepository.cs" />
     <Compile Include="Models\InterfacesRepository\IBankAccountRepository.cs" />
@@ -532,6 +556,7 @@
     <Compile Include="Models\FormsViewModels\PartnerContactFormViewModel.cs" />
     <Compile Include="Models\FormsViewModels\PartnerFormViewModel.cs" />
     <Compile Include="Models\FormsViewModels\UserFormViewModel.cs" />
+    <Compile Include="Models\InterfacesRepository\IVaultCashRepository.cs" />
     <Compile Include="Models\LoadCash.cs" />
     <Compile Include="Models\LocationType.cs" />
     <Compile Include="Models\Make.cs" />
@@ -557,6 +582,7 @@
     <Compile Include="PersistanceRepository\TerminalContactRepository.cs" />
     <Compile Include="PersistanceRepository\TerminalRepository.cs" />
     <Compile Include="PersistanceRepository\UserRepository.cs" />
+    <Compile Include="PersistanceRepository\VaultCashRespository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -845,7 +871,6 @@
     <Content Include="Views\Logos\Index.cshtml" />
     <Content Include="Views\Partners\Search.cshtml" />
     <Content Include="Views\PartnerContacts\Index.cshtml" />
-    <Content Include="Views\Partners\Sections\Contacts.cshtml" />
     <Content Include="Views\PartnerContacts\Search.cshtml" />
     <Content Include="Views\BankAccount\Create.cshtml" />
     <Content Include="Views\BankAccount\Details.cshtml" />
@@ -858,7 +883,6 @@
     <Content Include="Views\Terminals\Index.cshtml" />
     <Content Include="Views\BankAccount\Search.cshtml" />
     <Content Include="Views\Terminals\Search.cshtml" />
-    <Content Include="Views\Terminals\Sections\GeneralInfo.cshtml" />
     <Content Include="Views\Terminals\Sections\TerminalStatistics.cshtml" />
     <Content Include="Views\Terminals\Sections\Documents.cshtml" />
     <Content Include="Views\Terminals\Sections\Notes.cshtml" />
@@ -881,6 +905,11 @@
     <Content Include="Views\Users\Search.cshtml" />
     <Content Include="Views\Users\Delete.cshtml" />
     <Content Include="Views\BankAccount\Delete.cshtml" />
+    <Content Include="Views\Partners\Sections\Contacts.cshtml" />
+    <Content Include="Views\PartnerContacts\Delete.cshtml" />
+    <Content Include="Views\Users\Sections\Alerts.cshtml" />
+    <Content Include="Views\Terminals\Sections\GeneralInfo.cshtml" />
+    <Content Include="Views\VaultCash\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -1099,6 +1128,21 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201709282113300_ArregladoAmmountPorAmountErrorGramatical.resx">
       <DependentUpon>201709282113300_ArregladoAmmountPorAmountErrorGramatical.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709282132023_ElimineCampoInterchangedeTerminals.resx">
+      <DependentUpon>201709282132023_ElimineCampoInterchangedeTerminals.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709292200097_EliminadoVaultCashAmount.resx">
+      <DependentUpon>201709292200097_EliminadoVaultCashAmount.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709300251235_AddedKeyToUser.resx">
+      <DependentUpon>201709300251235_AddedKeyToUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709300303349_UserNameUnique.resx">
+      <DependentUpon>201709300303349_UserNameUnique.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201709300355273_UserNameUniqueEliminado.resx">
+      <DependentUpon>201709300355273_UserNameUniqueEliminado.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\DeleteLogoModel.resx">
       <DependentUpon>DeleteLogoModel.cs</DependentUpon>
